# api/swagger/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0.1",
     "title": "Simple Ethernet Service",
     "description": "An API that accepts a simple Ethernet object and converts it to a MEF SCA object on the server side",
     "termsOfService": "",
@@ -80,8 +80,7 @@
           "in": "path",
           "description": "ID of Ethernet Service to fetch",
           "required": true,
-          "type": "integer",
-          "format": "int64"
+          "type": "string"
         }],
         "responses": {
           "200": {
@@ -106,8 +105,7 @@
           "in": "path",
           "description": "ID of Ethernet Service to delete",
           "required": true,
-          "type": "integer",
-          "format": "int64"
+          "type": "string"
         }],
         "responses": {
           "204": {
@@ -156,8 +154,7 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "integer",
-          "format": "int64"
+          "type": "string"
         },
         "serviceType": {
           "description": "Ethernet Private (Port Based) or Ethernet Virtual Private (VLAN based)",
@@ -168,7 +165,7 @@
           "type": "string",
           "enum": ["Gold", "Silver", "Bronze", "scavenger"]
         },
-        "bwAmount": {
+        "bw": {
           "type": "integer",
           "description": "Value specified in Megabits",
           "enum": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -194,15 +191,14 @@
           }
         }
       },
-      "required": ["id", "serviceType", "bwAmount", "cos"]
+      "required": ["id", "serviceType", "bw"]
     },
     "enni": {
       "type": "object",
       "properties": {
         "id": {
           "description": "UID of port",
-          "type": "integer",
-          "format": "int64"
+          "type": "string"
         },
         "ethertype": {
           "description": "Ethertype handoff desired by customer",
@@ -222,8 +218,7 @@
       "properties": {
         "id": {
           "description": "UID of port",
-          "type": "integer",
-          "format": "int64"
+          "type": "string"
         }
       },
       "xml": {
